--- a/1-deep-learning-with-pytorch/1_what-is-pytorch.ipynb
+++ b/1-deep-learning-with-pytorch/1_what-is-pytorch.ipynb
@@ -29,10 +29,10 @@
      "output_type": "stream",
      "text": [
       "tensor([[ 0.0000e+00, -2.5244e-29,  0.0000e+00],\n",
-      "        [-2.5244e-29,  3.0297e+32,  2.7224e+20],\n",
-      "        [ 7.7782e+31,  4.7429e+30,  1.3818e+31],\n",
-      "        [ 1.7225e+22,  1.4602e-19,  1.8617e+25],\n",
-      "        [ 1.1835e+22,  4.3066e+21,  6.3828e+28]])\n"
+      "        [-2.5244e-29,  5.6052e-45,  0.0000e+00],\n",
+      "        [ 8.2498e-34,  1.4013e-45, -1.4393e+22],\n",
+      "        [ 4.5853e-41,  0.0000e+00,  0.0000e+00],\n",
+      "        [ 4.4620e-11, -4.6577e-10,  4.4609e-11]])\n"
      ]
     }
    ],
@@ -51,11 +51,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1909, 0.9081, 0.0617],\n",
-      "        [0.4454, 0.9349, 0.1353],\n",
-      "        [0.8201, 0.8674, 0.3757],\n",
-      "        [0.5450, 0.3785, 0.3264],\n",
-      "        [0.7913, 0.4354, 0.2440]])\n"
+      "tensor([[0.6661, 0.1863, 0.7925],\n",
+      "        [0.7096, 0.9026, 0.5634],\n",
+      "        [0.2822, 0.2051, 0.5063],\n",
+      "        [0.1157, 0.3504, 0.9759],\n",
+      "        [0.5185, 0.5085, 0.0179]])\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "# or create a tensor bases on an existing tensor. These methods will reuse properties of the input tensor, e.g. dtype, unless new values are provided by user.\n",
+    "# or create a tensor based on an existing tensor. These methods will reuse properties of the input tensor, e.g. dtype, unless new values are provided by user.\n",
     "x = x.new_ones(5, 3, dtype=torch.double)    # new_* methods take in sizes\n",
     "print(x)"
    ]
@@ -120,11 +120,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7572, 0.7105, 0.5106],\n",
-      "        [0.1659, 0.0942, 0.3892],\n",
-      "        [0.0237, 0.2645, 0.7006],\n",
-      "        [0.5960, 0.5713, 0.4800],\n",
-      "        [0.9588, 0.3914, 0.8073]])\n"
+      "tensor([[1.2239e-01, 6.5364e-01, 7.8861e-01],\n",
+      "        [8.4257e-01, 9.5634e-01, 3.2474e-01],\n",
+      "        [6.9625e-02, 3.0557e-01, 9.2113e-01],\n",
+      "        [1.8900e-02, 9.9752e-01, 6.4405e-01],\n",
+      "        [6.0775e-01, 7.2360e-05, 9.3798e-01]])\n"
      ]
     }
    ],
@@ -157,7 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Operations"
+    "# Operations\n",
+    "# There are multiple syntaxes for operations. In the following example, we will take a look at the addition operation."
    ]
   },
   {
@@ -169,11 +170,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1.2964, 0.7176, 1.0137],\n",
-      "        [0.7568, 0.1203, 0.6661],\n",
-      "        [0.8953, 1.0710, 1.1012],\n",
-      "        [1.1796, 1.5353, 1.1148],\n",
-      "        [1.5554, 1.3471, 1.0146]])\n"
+      "tensor([[0.1594, 1.1615, 0.8987],\n",
+      "        [1.0675, 1.0992, 0.4737],\n",
+      "        [0.5131, 1.1793, 1.3317],\n",
+      "        [0.6511, 1.5840, 1.0235],\n",
+      "        [1.0074, 0.1483, 0.9826]])\n"
      ]
     }
    ],
@@ -181,6 +182,348 @@
     "# Addition: syntax 1\n",
     "y = torch.rand(5, 3)\n",
     "print(x + y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Addition syntax 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1594, 1.1615, 0.8987],\n",
+      "        [1.0675, 1.0992, 0.4737],\n",
+      "        [0.5131, 1.1793, 1.3317],\n",
+      "        [0.6511, 1.5840, 1.0235],\n",
+      "        [1.0074, 0.1483, 0.9826]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.add(x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Addition: providing an output tensor as argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1594, 1.1615, 0.8987],\n",
+      "        [1.0675, 1.0992, 0.4737],\n",
+      "        [0.5131, 1.1793, 1.3317],\n",
+      "        [0.6511, 1.5840, 1.0235],\n",
+      "        [1.0074, 0.1483, 0.9826]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = torch.empty(5, 3)\n",
+    "torch.add(x, y, out=result)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Addition: in-place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1594, 1.1615, 0.8987],\n",
+      "        [1.0675, 1.0992, 0.4737],\n",
+      "        [0.5131, 1.1793, 1.3317],\n",
+      "        [0.6511, 1.5840, 1.0235],\n",
+      "        [1.0074, 0.1483, 0.9826]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y.add_(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE\n",
+    "# Any operation that mutates a tensor in-place is post-fixed wiath an '_'. For eample 'x.copy_(y)', 'x.t_()', will change 'x'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can use standard NumPy-like indexing with all bells and whistles!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([6.5364e-01, 9.5634e-01, 3.0557e-01, 9.9752e-01, 7.2360e-05])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rezising: if you want to resize/reshape tensor, you can use 'torch.view'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 4]) torch.Size([16]) torch.Size([2, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.rand(4, 4)\n",
+    "y = x.view(16)\n",
+    "z = x.view(-1, 8) # the size -1 is infereded from other dimensiones\n",
+    "print(x.size(), y.size(), z.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you have one element te3nsor, use '.item()' to get the value as a Python number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.7432])\n",
+      "0.7432321310043335\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(1)\n",
+    "print(x)\n",
+    "print(x.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NumPy Bridge\n",
+    "# Converting a Torch Tensor to a NumPy array and vice versar is a breeze.\n",
+    "# The Torch Tensor and NumPy will share thir underlaying memory locations (if the Torch Tensor is on CPU), and changing\n",
+    "# one will change the other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting a Torch Tensor to a NumPy Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1., 1., 1., 1., 1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.ones(5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.numpy()\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See how the numpy array changes in value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2., 2., 2., 2., 2.])\n",
+      "[2. 2. 2. 2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.add_(1)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting NumPy Array to Torch Tensor\n",
+    "# See how changing the np array changed the Torch Tensor automatically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2. 2. 2. 2. 2.]\n",
+      "tensor([2., 2., 2., 2., 2.], dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.ones(5)\n",
+    "b = torch.from_numpy(a)\n",
+    "np.add(a, 1, out=a)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All the Tensors on the CPU except a CharTensor support converting to NumPy and back."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CUDA Tensors\n",
+    "# Tensors can be moved onto any device using the '.to' method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let us run this cell only if CUDA is avaliable\n",
+    "# We will use ``torch.device`` objects to move tensors in and out of GPU\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")              # a CUDA device object\n",
+    "    y = torch.ones_like(x, device=device)      # directly create a tensor on GPU\n",
+    "    x = x.to(device)                           # or just use string ``.to(\"cuda\")``\n",
+    "    z = x + y\n",
+    "    print(z)\n",
+    "    print(z.to(\"cpu\", torch.double))           # ``.to`` can also change dtype together!"
    ]
   }
  ],
